# advance-solid

./: AGENTS.md  README.md  config_mcp.md  inspect_part_v2.py  pyproject.toml
.pytest-tmp/test_open_analyze_and_export_with_mocked_cadquery-3e654b2918fa4fe493b30cdd4cac8dd7/: part.stl.swmcp.json
.pytest-tmp/test_open_analyze_and_export_with_mocked_cadquery-e446bc67c4f649d5b3a961a467071a11/: part.step
docs/: architecture.md  tools.md  usage.md
evaluations/: read_only_smoke.xml
examples/: mcp_client_config.json
src/solidworks_mcp/: __init__.py  config.py  server.py
src/solidworks_mcp/backends/headless/: __init__.py  backend.py
src/solidworks_mcp/backends/solidworks/: __init__.py  backend.py  constants.py  dispatcher.py  inspect.py
src/solidworks_mcp/bridges/solidworks_macro/: README.md  __init__.py  named_pipe_client.py  sample_bridge.bas  (+1 more)
src/solidworks_mcp/core/: __init__.py  backend.py  errors.py  factory.py
src/solidworks_mcp/domain/: __init__.py  drawing.py
src/solidworks_mcp/helpers/: bom.py  configurations.py  materials.py  properties.py
src/solidworks_mcp/schemas/: __init__.py  common.py  documents.py  modeling.py  properties.py
src/solidworks_mcp/tools/: __init__.py  registry.py  runtime.py
tests/: conftest.py  test_contracts.py  test_drawing_domain.py  test_headless_backend.py  test_helpers_bom_materials_configurations.py  test_helpers_properties.py  test_runtime_factory.py  test_tool_registration.py
tests/backends/solidworks/: test_backend_com_properties.py  test_dispatcher.py  test_inspect.py  test_phase2_operations.py
